[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = { version = "1.8", features = ["std", "v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
